<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/iv_video_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/item_video" />

    <TextView
        android:id="@+id/tv_video_name"
        android:layout_toRightOf="@+id/iv_video_picture"
        android:layout_marginLeft="20dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/video_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_video_time"
        android:layout_toRightOf="@+id/iv_video_picture"
        android:textSize="15sp"
        android:text="@string/video_time"
        android:textColor="@color/grey"

        android:layout_alignLeft="@+id/tv_video_name"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_video_size"
        android:textSize="15sp"
        android:text="@string/video_size"
         android:layout_alignParentRight="true"
        android:layout_marginRight="13dp"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <View
        android:layout_marginRight="3dp"
        android:layout_marginLeft="3dp"
        android:background="@color/cut"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="1dp">
    </View>



</RelativeLayout>
